--- a/NILU.bib
+++ b/NILU.bib
@@ -267,3 +267,104 @@ PAGES = {7963--7978},
 URL = {https://acp.copernicus.org/articles/10/7963/2010/},
 DOI = {10.5194/acp-10-7963-2010}
 
+
+
+@Article{Yttri2021,
+AUTHOR = {Yttri, K. E. and Canonaco, F. and Eckhardt, S. and Evangeliou, N. and Fiebig, M. and Gundersen, H. and Hjellbrekke, A.-G. and Lund Myhre, C. and Platt, S. M. and Pr\'ev\^ot, A. S. H. and Simpson, D. and Solberg, S. and Surratt, J. and T{\o}rseth, K. and Uggerud, H. and Vadset, M. and Wan, X. and Aas, W.},
+TITLE = {Trends, composition, and sources of carbonaceous aerosol at the Birkenes Observatory, northern Europe, 2001--2018},
+JOURNAL = {Atmospheric Chemistry and Physics},
+VOLUME = {21},
+YEAR = {2021},
+NUMBER = {9},
+PAGES = {7149--7170},
+URL = {https://acp.copernicus.org/articles/21/7149/2021/},
+DOI = {10.5194/acp-21-7149-2021}
+}
+
+@Article{Vivanco2018,
+AUTHOR = {Vivanco, M. G. and Theobald, M. R. and Garc\'{\i}a-G\'omez, H. and Garrido, J. L. and Prank, M. and Aas, W. and Adani, M. and Alyuz, U. and Andersson, C. and Bellasio, R. and Bessagnet, B. and Bianconi, R. and Bieser, J. and Brandt, J. and Briganti, G. and Cappelletti, A. and Curci, G. and Christensen, J. H. and Colette, A. and Couvidat, F. and Cuvelier, C. and D'Isidoro, M. and Flemming, J. and Fraser, A. and Geels, C. and Hansen, K. M. and Hogrefe, C. and Im, U. and Jorba, O. and Kitwiroon, N. and Manders, A. and Mircea, M. and Otero, N. and Pay, M.-T. and Pozzoli, L. and Solazzo, E. and Tsyro, S. and Unal, A. and Wind, P. and Galmarini, S.},
+TITLE = {Modeled deposition of nitrogen and sulfur in Europe estimated by 14 air
+quality model systems: evaluation, effects of changes in emissions and
+implications for habitat protection},
+JOURNAL = {Atmospheric Chemistry and Physics},
+VOLUME = {18},
+YEAR = {2018},
+NUMBER = {14},
+PAGES = {10199--10218},
+URL = {https://acp.copernicus.org/articles/18/10199/2018/},
+DOI = {10.5194/acp-18-10199-2018}
+}
+
+@Article{Theobald2019,
+AUTHOR = {Theobald, M. R. and Vivanco, M. G. and Aas, W. and Andersson, C. and Ciarelli, G. and Couvidat, F. and Cuvelier, K. and Manders, A. and Mircea, M. and Pay, M.-T. and Tsyro, S. and Adani, M. and Bergstr\"om, R. and Bessagnet, B. and Briganti, G. and Cappelletti, A. and D'Isidoro, M. and Fagerli, H. and Mar, K. and Otero, N. and Raffort, V. and Roustan, Y. and Schaap, M. and Wind, P. and Colette, A.},
+TITLE = {An evaluation of European nitrogen and sulfur wet deposition and their
+trends estimated by six chemistry transport models for \hack{\break}the
+period 1990--2010},
+JOURNAL = {Atmospheric Chemistry and Physics},
+VOLUME = {19},
+YEAR = {2019},
+NUMBER = {1},
+PAGES = {379--405},
+URL = {https://acp.copernicus.org/articles/19/379/2019/},
+DOI = {10.5194/acp-19-379-2019}
+}
+
+
+@TECHREPORT{Colette2021,
+AUTHOR = {Colette, A. and Solberg, S. and Aas, W. and and Walker, S.-E.}
+institution = {European Topic Centre on Air pollution, transport, noise and industrial pollution, , Kjeller, Norway}
+TITLE = {Understanding Air Quality Trends in Europe, Focus on the relative contribution of changes in emission of activity sectors, natural fraction and meteorological variability} 
+number = {EIONET report ETC/ATNI 2020/8}.
+year = {2021}
+
+
+@Article{Banzhaf2015,
+AUTHOR = {Banzhaf, S. and Schaap, M. and Kranenburg, R. and Manders, A. M. M. and Segers, A. J. and Visschedijk, A. J. H. and Denier van der Gon, H. A. C. and Kuenen, J. J. P. and van Meijgaard, E. and van Ulft, L. H. and Cofala, J. and Builtjes, P. J. H.},
+TITLE = {Dynamic model evaluation for secondary inorganic aerosol and its precursors over Europe between 1990 and 2009},
+JOURNAL = {Geoscientific Model Development},
+VOLUME = {8},
+YEAR = {2015},
+NUMBER = {4},
+PAGES = {1047--1070},
+URL = {https://gmd.copernicus.org/articles/8/1047/2015/},
+DOI = {10.5194/gmd-8-1047-2015}
+}
+
+@Article{Crippa2016,
+AUTHOR = {Crippa, M. and Janssens-Maenhout, G. and Dentener, F. and Guizzardi, D. and Sindelarova, K. and Muntean, M. and Van Dingenen, R. and Granier, C.},
+TITLE = {Forty years of improvements in European air quality: regional
+policy-industry interactions with global impacts},
+JOURNAL = {Atmospheric Chemistry and Physics},
+VOLUME = {16},
+YEAR = {2016},
+NUMBER = {6},
+PAGES = {3825--3841},
+URL = {https://acp.copernicus.org/articles/16/3825/2016/},
+DOI = {10.5194/acp-16-3825-2016}
+}
+
+@article{Redington2009,
+title = {Sensitivity of modelled sulphate and nitrate aerosol to cloud, pH and ammonia emissions},
+journal = {Atmospheric Environment},
+volume = {43},
+number = {20},
+pages = {3227-3234},
+year = {2009},
+issn = {1352-2310},
+doi = {https://doi.org/10.1016/j.atmosenv.2009.03.041},
+url = {https://www.sciencedirect.com/science/article/pii/S1352231009002544},
+author = {A.L. Redington and R.G. Derwent and C.S. Witham and A.J. Manning},
+keywords = {Sulphate, Nitrate, Modelling, pH, Particulates},
+}
+
+@Article{Dalsoren2016,
+AUTHOR = {Dals{\o}ren, S. B. and Myhre, C. L. and Myhre, G. and Gomez-Pelaez, A. J. and S{\o}vde, O. A. and Isaksen, I. S. A. and Weiss, R. F. and Harth, C. M.},
+TITLE = {Atmospheric methane evolution the last 40 years},
+JOURNAL = {Atmospheric Chemistry and Physics},
+VOLUME = {16},
+YEAR = {2016},
+NUMBER = {5},
+PAGES = {3099--3126},
+URL = {https://acp.copernicus.org/articles/16/3099/2016/},
+DOI = {10.5194/acp-16-3099-2016}
+}
