--- a/RefsUpdates.bib
+++ b/RefsUpdates.bib
@@ -1,7 +1,7 @@
 @Article{troenkz,
 AUTHOR = {Troen, I. and Mahrt, L.},
 TITLE = {A simple model of the atmospheric boundary layer: sensitivity to surface evaporation},
-JOURNAL = {Boundary-Layer Meteorology},
+JOURNAL = {Boundary-Layer Meteorol.},
 VOLUME = {37},
 YEAR = {1986},
 PAGES = {129–-148},
@@ -11,7 +11,7 @@ DOI = {doi.org/10.1007/BF00122760}
 @Article{JcRb,
 AUTHOR = {Jeri\v{c}evi\'c, A. and Kraljevi\'c, L. and Grisogono, B. and Fagerli, H. and Ve\v{c}enaj, \v{Z}.},
 TITLE = {Parameterization of vertical diffusion and the atmospheric boundary layer height determination in the EMEP model},
-JOURNAL = {Atmospheric Chemistry and Physics},
+JOURNAL = {Atmos. Chem. Phys.},
 VOLUME = {10},
 YEAR = {2010},
 NUMBER = {2},
@@ -69,4 +69,16 @@ DOI = {10.5194/acp-10-341-2010}
   url       = {http://www.atmos-chem-phys.net/11/6063/2011/}
 }
 
+
+@Article{wind-2020,
+AUTHOR = {Wind, P. and Rolstad Denby, B. and Gauss, M.},
+TITLE = {Local fractions -- a method for the calculation of local source contributions to air pollution, illustrated by examples using the EMEP MSC-W model (rv4\_33)},
+JOURNAL = {Geoscientific Model Development},
+VOLUME = {13},
+YEAR = {2020},
+NUMBER = {3},
+PAGES = {1623--1634},
+URL = {https://www.geosci-model-dev.net/13/1623/2020/},
+DOI = {10.5194/gmd-13-1623-2020}
+}
 
