--- a/chapterIntro.tex
+++ b/chapterIntro.tex
@@ -246,7 +246,7 @@ are \ug for PM concentrations and the following acronyms are used for different 
 
 \item[POA] - primary organic aerosol - which is the organic component of
 the PPM emissions (defined below). (POA is in this report assumed to
-be entirely in the particle phase, see Chap.~\ref{ch:Condensables}.)
+be entirely in the particle phase, see \citet{R2020:SVOC}.)
   
 \item[SOA] - secondary organic aerosol, defined as the aerosol mass
   arising from the oxidation products of gas-phase organic species.
@@ -270,13 +270,13 @@ be entirely in the particle phase, see Chap.~\ref{ch:Condensables}.)
   up to 2.5 $\mu$m. In the EMEP
   MSC-W model, PM$_{2.5}$ is calculated as PM$_{2.5}$ = SO$^{2-}_4$
   + NO$^-_3$(fine) + NH$^+_4$ + SS$_{2.5}$ + MinDust(fine)
-  + SOA(fine) + PPM$_{2.5}$ + 0.134 NO$^-_3$(coarse) + PM25water.
+  + SOA(fine) + PPM$_{2.5}$ + 0.13 $\cdot$ NO$^-_3$(coarse) + PM25water.
   (PM25water = PM associated water).
 
 \item[PM$_{\text{coarse}}$] - coarse particulate matter with aerodynamic
   diameter between 2.5$\mu$m 
   and 10$\mu$m. In the EMEP MSC-W model PM$_{\text{coarse}}$ is calculated
-  as PM$_{\text{coarse}}$ = 0.73 NO$^-_3$(coarse)+ SS(coarse)
+  as PM$_{\text{coarse}}$ = 0.87 $\cdot$ NO$^-_3$(coarse)+ SS(coarse)
   + MinDust(coarse) + PPM$_{coarse}$.
 
 \item[PM$_{10}$] - particulate matter with aerodynamic diameter
@@ -444,7 +444,7 @@ centres in 2020 (relevant for transboundary acidification, eutrophication,
 ozone and particulate matter) follows at the end of this section.
 
 %\newpage
-\subsection*{Peer-reviewed publications in 2019}
+\subsection*{Peer-reviewed publications in 2020}
 
 The following scientific papers of relevance to transboundary acidification, eutrophication, ground level ozone and particulate matter, involving EMEP/MSC-W and EMEP/CCC staff, have become available in 2019:
 
@@ -452,222 +452,106 @@ The following scientific papers of relevance to transboundary acidification, eut
 \begin{list}{}{\setlength{\leftmargin}{15pt}\setlength{\itemindent}{-\leftmargin}}\small
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \item[]
-Aas, Wenche; Mortier, Augustin; Bowersox, Van C.; Cherian, Ribu; Faluvegi, Greg; Fagerli, Hilde; Hand, Jenny; Klimont, Zbigniew; Galy-Lacaux, Corinne; Lehmann, Christopher M. B.; Myhre, Cathrine Lund; Myhre, Gunnar; Oliviè, Dirk Jan Leo; Sato, Keiichi; Quaas, Johannes; Rao, P.S.P.; Schulz, Michael; Shindell, Drew; Skeie, Ragnhild Bieltvedt; Stein, Ariel; Takemura, Toshihiko; Tsyro, Svetlana; Vet, Robert; Xu, Xiaobin.
-Global and regional trends of atmospheric sulfur.
-Scientific Reports , 9 , 2019.
-DOI: 10.1038/s41598-018-37304-0
+Amann, M.; Kiesewetter, G.; Schöpp, Wolfgang; Klimont, Zbigniew; Winiwarter, Wilfried; Cofala, Janusz; Rafaj, Peter; Hoglund-Isaksson, Lena; Gomez-Sabriana, Adriana; Heyes, Chris; Purohit, Pallav; Borken-Kleefeld, Jens; Wagner, Fabian; Sander, Robert; Fagerli, Hilde; Nyiri, Agnes; Cozzi, Laura; Pavarini, Claudia.
+Reducing global air pollution: The scope for further policy interventions: Achieving clean air worldwide.
+Philosophical Transactions of the Royal Society A: Mathematical, Physical and Engineering Sciences2020; 378.(2183)
+DOI: 10.1098/rsta.2019.0331
 
 \item[]
-Barregård, Lars; Molnar, Peter; Jonson, Jan Eiof; Stockfelt, Leo.
-Impact on Population Health of Baltic Shipping Emissions.
-International Journal of Environmental Research and Public Health 2019 ; 16.(11)
-DOI: 10.3390/ijerph16111954
+Blechschmidt, Anne-Marlene; Arteta, Joaquim; Coman, Adriana; Curier, Lyana; Eskes, Henk; Foret, Gilles; Gielen, Clio; Hendrick, François; Marécal, Virginie; Meleux, Frédérik; Parmentier, Jonathan; Peters, Enno; Pinardi, Gaia; Piters, Ankie J.M.; Plu, Matthieu; Richter, Andreas; Segers, Arjo; Sofiev, Mikhail; Valdebenito, Alvaro; Van Roozendael, Michel; Vira, Julius; Vlemmix, Tim; Burrows, John P..
+Comparison of tropospheric NO2 columns from MAX-DOAS retrievals and regional air quality model simulations.
+Atmospheric Chemistry and Physics ; 2020; 20 p. 2795-2823
+DOI: 10.5194/acp-20-2795-2020 
 
 \item[]
-Boy, Michael; Thomson, Erik S.; Acosta Navarro, Juan-Camilo; Arnalds, Olafur; Batchvarova, Ekaterina; Bäck, Jaana; Berninger, Frank; Bilde, Merete; Brasseur, Zoe; Dagsson-Waldhauserova, Pavla; Castarede, Dimitri; Dalirian, Maryam; de Leeuw, Gerrit; Dragosics, Monika; Duplissy, Ella-Maria; Duplissy, Jonathan; Ekman, Annica; Fang, Keyan; Gallet, Jean-Charles; Glasius, Marianne; Gryning, Sven-Erik; Grythe, Henrik; Hansson, Hans-Christen; Hansson, Margareta; Isaksson, Elisabeth; Iversen, Trond; Jónsdóttir, Ingibjörg Svala; Kasurinen, Ville; Kirkevåg, Alf. ; Korhola, Atte; Krejci, Radovan; Kristjansson, Jon Egill; Lappalainen, Hanna K.; Lauri, Antti; Leppäranta, Matti; Lihavainen, Heikki; Makkonen, Risto; Massling, Andreas; Meinander, Outi; Nilsson, E. Douglas; Ólafsson, Haraldur; Pettersson, Jan B. C.; Prisle, Nønne L.; Riipinen, Ilona; Roldin, Pontus; Ruppel, Meri; Salter, Matthew E.; Sand, Maria; Seland, Øyvind; Seppä, Heikki; Skov, Henrik; Soares, Joana; Stohl, Andreas; Ström, Johan; Svensson, Jonas; Swietlicki, Erik; Tabakova, Ksenia; Thorsteinsson, Throstur; Virkkula, Aki; Weyhenmeyer, Gesa A.; Wu, Yusheng; Zieger, Paul; Kulmala, Markku.
-Interactions between the atmosphere, cryosphere,and ecosystems at northern high latitudes. .
-Atmospheric Chemistry and Physics , 2019, p. 2015-2061.
-DOI: 10.5194/acp-19-2015-2019
+Denby, Bruce; Gauss, Michael; Wind, Peter; Mu, Qing; Wærsted, Eivind Grøtting; Fagerli, Hilde; Valdebenito Bustamante, Alvaro Moises; Klein, Heiko.
+Description of the uEMEP_v5 downscaling approach for the EMEP MSC-W chemistry transport model.
+Geoscientific Model Development ; 2020; 13.(12); p. 6303-6323
+DOI: 10.5194/gmd-13-6303-2020 
 
 \item[]
-Brasseur, Guy P.; Xie, Ying; Petersen, Anna Katinka; Bouarar, Idir; Flemming, Johannes; Gauss, Michael; Jiang, Fei; Kouznetsov, Rostislav; Kranenburg, Richard; Mijling, Bas; Peuch, Vincent-Henri; Pommier, Matthieu; Segers, Arjo; Sofiev, Mikhail; Timmermans, Renske; van der A, Ronald; Walters, Stacy; Xu, Jianming; Zhou, Guangqiang.
-Ensemble forecasts of air quality in eastern China-Part 1: Model description and implementation of the MarcoPolo-Panda prediction system, version 1.
-Geoscientific Model Development 2019 ; 12.(1) p. 33-67
-DOI: 10.5194/gmd-12-33-2019
+Etzold, Sophia; Ferretti, Marco; Reinds, Gert-Jan; Solberg, Svein; Gessler, Arthur; Waldner, Peter; Schaub, Marcus; Simpson, David; Benham, Sue; Hansen, Karin; Ingerslev, Morten; Jonard, Mathieu; Karlsson, Per Erik; Lindroos, Antti-Jussi; Marchetto, Aldo; Manninger, Miklos; Meesenburg, Henning; Merilä, Päivi; Nöjd, Pekka; Rautio, Pasi; Sanders, Tanja GM; Seidling, Walter; Skudnik, Mitja; Thimonier, Anne; Verstraeten, Arne; Vesterdal, Lars; Vejpustkova, Monika; de Vries, Wim.
+Nitrogen deposition is the most important environmental driver of growth of pure, even-aged and managed European forests.
+Forest Ecology and Management ; 2020; 458; p. 1-13
+DOI: 10.1016/j.foreco.2019.117762
 
 \item[]
-Christensen, Torben R.; Arora, Vivek K; Gauss, Michael; Hoglund-Isaksson, Lena; Parmentier, Frans-Jan W.
-Tracing the climate signal: mitigation of anthropogenic methane emissions can outweigh a large Arctic natural emission increase.
-Scientific Reports , 9 (1146) , 2019.
-DOI: 10.1038/s41598-018-37719-9
+Flechard, Chris R.; Ibrom, Andreas; Skiba, Ute; de Vries, Wim; Van Oijen, Marcel; Cameron, David R.; Dise, Nancy B.; Korhonen, Janne; Buchmann, Nina; Legout, Arnaud; Simpson, David; Sanz, Maria J.; Aubinet, Marc; Loustau, Denis; Montagnani, Leonardo; Neirynck, Johan; Janssens, Ivan A.; Pihlatie, Mari; Kiese, Ralf; Siemens, Jan; Francez, Andre-Jean; Augustin, Jurgen; Varlagin, Andrej; Olejnik, Janusz; Juszczak, Radoslaw; Aurela, Mika; Berveiller, Daniel; Chojnicki, Bogdan H.; Dämmgen, Urich; Delpierre, Nicolas; Djuricic, Vesna; Drewer, Julia; Dufrene, Eric; Eugster, Werner; Fauvel, Yannick; Fowler, David; Frumau, Arnoud; Granier, Andre; Gross, Patrick; Hamon, Yannick; Helfter, Carole; Hensen, Arjan; Horvath, Laszlo; Kitzler, Barbara; Kruijt, Bart; Kutsch, Werner; Lobo-do-Vale, Raquel; Lohila, Annalea; Longdoz, Bernard; Marek, Michal V.; Matteucci, Giorgio; Mitosinkova, Marta; Moreaux, Virginie; Neftel, Albrecht; Ourcival, Jean-Marc; Pilegaard, Kim; Pita, Gabriel; Sanz, Francisco; Schjoerring, Jan K.; Sebastià, Maria-Teresa; Tang, Y. Sim; Uggerud, Hilde Thelle; Urbaniak, Marek; van Dijk, Netty; Vesala, Timo; Vidic, Sonja; Vincke, Caroline; Weidinger, Tamas; Sechmeister-Boltenstern, Sophie; Butterbach-Bahl, Klaus; Nemitz, Eiko; Sutton, Mark A..
+Carbon–nitrogen interactions in European forests and semi-natural vegetation – Part 1: Fluxes and budgets of carbon, nitrogen and greenhouse gases from ecosystem monitoring and modelling.
+Biogeosciences ; 2020; 17; p. 1583-1620
+DOI: 10.5194/bg-17-1583-2020
 
 \item[]
-Ciarelli, Giancarlo; Colette, Augustin; Schucht, Simone; Beekmann, Matthias; Andersson, Camilla; Manders-Groot, Astrid; Mircea, Mihaela; Tsyro, Svetlana; Fagerli, Hilde; Ortiz, Alberto González; Adani, Mario; Briganti, Gino; Cappelletti, Andrea; D'Isidoro, Massimo; Cuvelier, Cornelis; Couvidat, Florian; Meleux, Frédérik; Bessagnet, Bertrand.
-Long-term health impact assessment of total PM2.5 in Europe during the 1990–2015 period.
-Atmospheric Environment: X 2019 ; 3.
-DOI: 10.1016/j.aeaoa.2019.100032
+Jähn, Michael; Kuhlmann, Gerrit; Mu, Qing; Haussaire, Jean-Matthieu; Ochsner, David; Osterried, Katherine; Clément, Valentin; Brunner, Dominik.
+An online emission module for atmospheric chemistry transport models: Implementation in COSMO-GHG v5.6a and COSMO-ART v5.1-3.1.
+Geoscientific Model Development ; 2020; 13.(5); p. 2379-2392
+DOI: 10.5194/gmd-13-2379-2020
 
 \item[]
-Ciarelli, Giancarlo; Theobald, Mark, R.; Vivanco, Marta García; Beekmann, Matthias; Aas, Wenche; Andersson, Camilla; Bergström, Robert; Manders-Groot, Astrid; Couvidat, Florian; Mircea, Mihaela; Tsyro, Svetlana; Fagerli, Hilde; Mar, Kathleen; Raffort, Valentin; Roustan, Yelva; Pay, Maria-Teresa; Schaap, Martijn; Kranenburg, Richard; Adani, Mario; Briganti, Gino; Cappelletti, Andrea; D'Isidoro, Massimo; Cuvelier, Cornelis; Cholakian, Arineh; Bessagnet, Bertrand; Wind, Peter; Colette, Augustin.
-Trends of inorganic and organic aerosols and precursor gases in Europe: insights from the EURODELTA multi-model experiment over the 1990–2010 period.
-Geoscientific Model Development 2019 ; 12.(12) p. 4923-4954
-DOI: 10.5194/gmd-12-4923-2019
+Jonson, Jan Eiof; Gauss, Michael; Schulz, Michael; Jalkanen, Jukka-Pekka; Fagerli, Hilde.
+Effects of global ship emissions on European air pollution levels.
+Atmospheric Chemistry and Physics 2020; 20, p. 11399–11422,
+DOI: 10.5194/acp-20-11399-2020
 
 \item[]
-Chatoutsidou, S.E., Kopanakis, I., Lagouvardos, K., Mihalopoulos N., Tørseth. K., and Lazaridis M.:
-PM10 levels at urban, suburban, and background locations in the eastern Mediterranean: local versus regional sources with emphasis on African dust. 
-Air Qual Atmos Health 12, 1359–1371 (2019). 
-https://doi.org/10.1007/s11869-019-00750-4
+Korsakissok, I.; Périllat, R.; Andronopoulos, S.; Bedwell, P.; Berge, Erik; Charnock, T.; Geertsema, G.; Gering, F.; Hamburger, Thomas; Klein, Heiko; Leadbetter, S.; Lind, Ole Christian; Pázmándi, T.; Rudas, Cs.; Salbu, Brit; Sogachev, A.; Syed, Naeem Ul Hasan; Tomas, J.M.; Ulimoen, Magnus; de Vries, H.; Wellings, J..
+Uncertainty propagation in atmospheric dispersion models for radiological emergencies in the pre- and early release phase: Summary of case studies.
+Radioprotection - Revue de la Societé Francaise de Radioprotection ; 2020; 55; p. S57-S68
+DOI: 10.1051/radiopro/2020013 
 
 \item[]
-Evangeliou, N., Kylling, A., Eckhardt, S., Myroniuk, V., Stebel, K., Paugam, R., Zibtsev, S., and Stohl, A.: 
-Open fires in Greenland in summer 2017: transport, deposition and radiative effects of BC, OC and BrC emissions, 
-Atmos. Chem. Phys., 19, 1393–1411, https://doi.org/10.5194/acp-19-1393-2019, 2019.
+Leadbetter, Susan J.; Andronopoulos, Spyros; Bedwell, Peter; Chevalier-Jabet, Karine; Gertie, Geertsema; Gering, Florian; Hamburger, Thomas; Jones, Andrew R.; Klein, Heiko;Korsakissok, Irene; Mathieu, Anne; Pázmándi, Tamas; Périllat, Raphael; Csilla, Rudas; Sogachev, Andrey; Szántó, Peter; Tomas, Jasper M.; Twenhöfel, Chris; de Vries, Hans; Wellings, Joseph.
+Ranking uncertainties in atmospheric dispersion modelling following the accidental release of radioactive material.
+Radioprotection - Revue de la Societé Francaise de Radioprotection 2020; 55.(HS1); p. 51-55
+DOI: 10.1051/radiopro/2020012 
 
 \item[]
-Fanourgakis, George S.; Kanakidou, Maria; Nenes, Athanasios; Bauer, Susanne E.; Bergman, Tommi; Carslaw, Kenneth S.; Grini, Alf; Hamilton, Douglas S.; Johnson, Jill S.; Karydis, Vlassis A.; Kirkevåg, Alf; Kodros, John K.; Lohmann, Ulrike; Luo, Gan; Makkonen, Risto; Matsui, Hitoshi; Neubauer, David; Pierce, Jeffrey Robert; Schmale, Julia; Stier, Philip; Tsigaridis, Kostas; van Noije, Twan P.C.; Wang, Hailong; Watson-Parris, Duncan; Westerveld, Daniel M.; Yang, Yang; Yoshioka, Masaru; Daskalakis, Nikos; Decesari, Stefano; Gysel-Beer, Martin; Kalivitis, Nikos; Liu, Xiaohong; Mahowald, Natalie M.; Myriokefalitakis, Stelios; Schrödner, Roland; Sfakianaki, Maria; Tsimpidi, Alexandra P.; Wu, Mingxuan; Yu, Fangqun. Evaluation of global simulations of aerosol particle and cloud condensation nuclei number, with implications for cloud droplet formation.
-Atmospheric Chemistry and Physics 2019
-DOI: 10.5194/acp-19-8591-2019
+Liland, Astrid; Lind, Ole Christian; Bartnicki, Jerzy; Brown, Justin; Dyve, Jan Erik; Iosjpe, Mikhail; Klein, Heiko; Lin, Yan; Simonsen, Magne; Strand, Per; Thørring, Håvard; Ytre-Eide, Martin Album; Salbu, Brit.
+Using a chain of models to predict health and environmental impacts in Norway from a hypothetical nuclear accident at the Sellafield site.
+Journal of Environmental Radioactivity ; 2020; 214-215; 106159
+DOI: 10.1016/j.jenvrad.2020.106159
 
 \item[]
-Graff, Lise Seland; Iversen, Trond; Bethke, Ingo; Debernard, Jens Boldingh; Seland, Øyvind; Bentsen, Mats; Kirkevåg, Alf; Li, Camille; Oliviè, Dirk Jan Leo.
-Arctic amplification under global warming of 1.5 and 2\degC in NorESM1-Happi.
-Earth System Dynamics 2019 ; 10.(3) p. 569-598
-DOI: 10.5194/esd-10-569-2019
+Mwase, Nandi S.; Ekstrøm, Alicia; Jonson, Jan Eiof; Svensson, Erik; Jalkanen, Jukka-Pekka; Wichmann, Janine; Molnar, Peter; Stockfelt, Leo.
+Health Impact of Air Pollution from Shipping in the Baltic Sea: Effects of Different Spatial Resolutions in Sweden.
+International Journal of Environmental Research and Public Health (IJERPH) 2020; 17.(21)
+DOI: 10.3390/ijerph17217963 
 
 \item[]
-Grennfelt, Peringe; Engleryd, Anna; Forsius, Martin; Hov, Øystein; Rodhe, Henning; Cowling, Ellis.
-Acid rain and air pollution: 50 years of progress in environmental science and policy.
-Ambio 2019 p. 1-16
-DOI: 10.1007/s13280-019-01244-4
+Pommier, Matthieu; Fagerli, Hilde; Schulz, Michael; Valdebenito, Alvaro; Kranenburg, Richard; Schaap, Martijn.
+Prediction of source contributions to urban background PM10 concentrations in European cities: A case study for an episode in December 2016 using EMEP/MSC-W rv4.15 and LOTOS-EUROS v2.0 - Part 1: The country contributions.
+Geoscientific Model Development ; 2020; 13.(4) ; p. 1787-1807
+DOI: 10.5194/gmd-13-1787-2020 
 
 \item[]
-Guarin, Jose Rafael; Emberson, Lisa; Simpson, David; Hernandez-Ochoa, Ixchel M; Rowland, Diane; Asseng, Senthold.
-Impacts of tropospheric ozone and climate change on Mexico wheat production.
-Climatic Change 2019 ; 155.(2) p. 157-174
-DOI: 10.1007/s10584-019-02451-4
+Simpson, David; Bergström, Robert; Briolat, Alan; Imhof, Hannah; Johansson, John; Priestley, Michael; Valdebenito Bustamante, Alvaro Moises.
+GenChem v1.0 – a chemical pre-processing and testing system for atmospheric modelling.
+Geoscientific Model Development 2020 ; 13. p. 6447-6465
+DOI: 10.5194/gmd-13-6447-2020 
 
 \item[]
-Heinze, Christoph; Eyring, Veronika; Friedlingstein, Pierre; Jones, Colin; Balkanski, Yves; Collins, William; Fichefet, Thierry; Gao, Shuang; Hall, Alex; Ivanova, Detelina; Knorr, Wolfgang; Knutti, Reto; Löw, Alexander; Ponater, Michael; Schultz, Martin G.; Schulz, Michael; Siebesma, Pier; Teixeira, Joao; Tselioudis, George; Vancoppenolle, Martin.
-ESD Reviews: Climate feedbacks in the Earth system and prospects for their evaluation.
-Earth System Dynamics 2019 ; 10.(3) p. 379-452
-DOI: 10.5194/esd-10-379-2019
+Sørensen, Jens Havskov; Bartnicki, Jerzy; Blixt Buhr, Anna Maria; Feddersen, Henrik; Hoe, Steen Cordt; Israelson, Carsten; Klein, Heiko; Lauritzen, Bent; Lindgren, Jonas; Schönfeldt, Fredrik; Sigg, Robert.
+Uncertainties in atmospheric dispersion modelling during nuclear accidents.
+Journal of Environmental Radioactivity 2020; 222. –
+DOI: 10.1016/j.jenvrad.2020.106356 
 
 \item[]
-Hodnebrog, Øivind; Myhre, Gunnar; Samset, Bjørn Hallvard; Alterskjær, Kari; Andrews, Timothy; Boucher, Oliviér; Faluvegi, Gregory S.; Fläschner, Dagmar; Forster, Piers M.; Kasoar, Matthew; Kirkevåg, Alf; Lamarque, Jean-François; Oliviè, Dirk Jan Leo; Richardson, Thomas Benjamin; Shawki, Dilshad; Shindell, Drew; Shine, Keith P; Stier, Philip; Takemura, Toshihiko; Voulgarakis, Apostolos; Watson-Parris, Duncan.
-Water vapour adjustments and responses differ between climate drivers.
-Atmospheric Chemistry and Physics 2019 ; 19.(20) p. 12887-12899
-DOI: 10.5194/acp-19-12887-2019
+van der Swaluw, Eric; de Vries, Wilco; Kruit, Roy Wichink; Aben, Jan; Vieno, Massimo; Fagerli, Hilde; Wind, Peter; van Pul, Addo.
+Trend Analysis of Air Pollution and Nitrogen Deposition Over the Netherlands Using the EMEP4NL and OPS Model.
+Springer Proceedings in Complexity 2020 ; p.. 47-51
+DOI: 10.1007/978-3-030-22055-6_8 
 
 \item[]
-Inness, Antje; Ades, Melanie; Agustí-Panareda, Anna; Barré, Jérôme; Benedictow, Anna Maria Katarina; Blechschmidt, Anne-Marlene; Dominguez, Juan Jose; Engelen, Richard J.; Eskes, Henk; Flemming, Johannes; Huijnen, Vincent; Jones, Luke; Kipling, Zak; Massart, Sebastien; Parrington, Mark; Peuch, Vincent-Henri; Razinger, Miha; Remy, Samuel; Schulz, Michael; Suttie, Martin.
-The CAMS reanalysis of atmospheric composition.
-Atmospheric Chemistry and Physics 2019 ; 19.(6) p. 3515-3556
-DOI: 10.5194/acp-19-3515-2019
+Wind, Peter; Denby, Bruce; Gauss, Michael.
+Local fractions-a method for the calculation of local source contributions to air pollution, illustrated by examples using the EMEP MSC-W model (rv4_33).
+Geoscientific Model Development ; 2020; 13.(3); p. 1623-1634
+DOI: 10.5194/gmd-13-1623-2020	Projects: NFR 267734 (AirQuip) 
 
 \item[]
-Jacobi, H.-W., Obleitner, F., Da Costa, S., Ginot, P., Eleftheriadis, K., Aas, W., and Zanatta, M.: Deposition of ionic species and black carbon to the Arctic snowpack: combining snow pit observations with modeling, 
-Atmos. Chem. Phys., 19, 10361–10377, 
-https://doi.org/10.5194/acp-19-10361-2019, 2019.
-
-\item[]
-Jenkin, Michael E.; Khan, Md Anwar Hossain; Shallcross, Dudley E; Bergström, Robert; Simpson, David; Murphy, KLC; Rickard, Andrew R.
-The CRI v2.2 reduced degradation scheme for isoprene.
-Atmospheric Environment 2019 ; 212. p. 172-182
-DOI: 10.5194/acp-19-7019-2019
-
-\item[]
-Jonson, Jan Eiof; Gauss, Michael; Jalkanen, Jukka Pekka; Johansson, Lasse.
-Effects of strengthening the Baltic Sea ECA regulations.
-Atmospheric Chemistry and Physics 2019 ; 19.(21) p. 13469-13487
-DOI: 10.5194/acp-19-13469-2019
-
-\item[]
-Kang, Sarah M.; Hawcroft, Matt; Xiang, Baoqiang; Hwang, Yen-Ting; Cazes, Gabriel; Codron, Francis; Crueger, Traute; Deser, Clara; Hodnebrog, Øivind; Kim, Hanjun; Kim, Jiyeong; Kosaka, Yu; Losada, Teresa; Mechoso, Carlos R.; Myhre, Gunnar; Seland, Øyvind; Stevens, Björn; Watanabe, Masahiro; Yu, Sungduk.
-Extratropical–Tropical Interaction Model Intercomparison Project (ETIN-MIP): Protocol and Initial results.
-Bulletin of The American Meteorological Society - (BAMS) 2019 ; 100.(12) p. 2589-2605
-DOI: 10.1175/BAMS-D-18-0301.1
-
-\item[]
-Karl, Matthias; Jonson, Jan Eiof; Uppstu, Andreas; Aulinger, Armin; Prank, Marje; Sofiev, Mikhail; Jalkanen, Jukka Pekka; Johansson, Lasse; Quante, Markus; Matthias, Volker.
-Effects of ship emissions on air quality in the Baltic Sea region simulated with three different chemistry transport models.
-Atmospheric Chemistry and Physics 2019 ; 19.(10) p. 7019-7053
-DOI: 10.5194/acp-19-7019-2019
-
-\item[]
-Lin, Yan; Couture, Raoul-Marie; Klein, Heiko; Ytre-Eide, Martin; Dyve, Jan Erik; Lind, Ole Christian; Bartnicki, Jerzy; Nizzetto, Luca; Butterfield, Daniel; Larssen, Thorjørn; Salbu, Brit.
-Modelling environmental impacts of Cesium-137 under a hypothetical release of radioactive waste.
-Bulletin of Environmental Contamination and Toxicology 2019 ; 103.(1) p. 69-74
-DOI: 10.1007/s00128-019-02601-5
-
-\item[]
-Madakumbura, Gavin D.; Kim, Hyungjun; Utsumi, Nobuyuki; Shiogama, Hideo; Fischer, Erich M.; Seland, Øyvind; Scinocca, John F.; Mitchell, Daniel M.; Hirabayashi, Yukiko; Oki, Taikan.
-Event-to-event intensification of the hydrologic cycle from 1.5 °C to a 2 °C warmer world.
-Scientific Reports 2019 ; 9.
-DOI: 10.1038/s41598-019-39936-2
-
-\item[]
-McFiggans, Gordon; Mentel, Thomas F.; Wildt, Jürgen; Pullinen, Iida; Kang, Sungah; Kleist, Einhard; Schmitt, Sebastian; Springer, Monika; Tillmann, Ralf; Wu, Cheng; Zhao, Defeng; Hallquist, Mattias; Faxon, Cameron; Le Breton, Michael; Hallquist, Åsa M; Simpson, David; Bergström, Robert; Jenkin, Michael E.; Ehn, Mikael; Thornton, Joel A.; Alfarra, M. Rami; Bannan, Thomas J.; Percival, Carl J.; Priestley, Michael; Topping, David; Kiendler-Scharr, Astrid.
-Secondary organic aerosol reduced by mixture of atmospheric vapours.
-Nature 2019 ; 565. p. 587-593
-DOI: 10.1038/s41586-018-0871-y
-
-\item[]
-McClintock, MA; McDowell, William H; Gonzalez, Grizelle; Schulz, Michael; Pett-Ridge, Julie C.
-African dust deposition in Puerto Rico: Analysis of a 20-year rainfall chemistry record and comparison with models.
-Atmospheric Environment 2019 ; 216. p. 1-11
-DOI: 10.1016/j.atmosenv.2019.\hfill\break 116907
-
-\item[]
-Mircea, Mihaela; Bessagnet, Bertrand; D'Isidoro, Massimo; Pirovano, Guido; Aksoyoglu, Sebnem; Ciarelli, Giancarlo; Tsyro, Svetlana; Manders, Astrid; Bieser, Johannes; Stern, Rainer; Vivanco, Marta García; Cuvelier, Cornelius; Aas, Wenche; Prévôt, André S.H.; Aulinger, Armin; Briganti, Gino; Calori, Giuseppe; Cappelletti, Andrea; Colette, Augustin; Couvidat, Florian; Fagerli, Hilde; Finardi, Sandro; Kranenburg, Richard; Rouil, Laurence; Silibello, Camillo; Spindler, Gerald; Poulain, Laurent; Herrmann, Hartmut; Jimenez, Jose L.; Day, Douglas A.; Tiitta, Petri; Carbone, Samara.
-EURODELTA III exercise: An evaluation of air quality models' capacity to reproduce the carbonaceous aerosol.
-Atmospheric Environment: X 2019 ; 2.
-DOI: 10.1016/j.aeaoa.2019.100018
-
-\item[]
-Myhre, Gunnar; Alterskjær, Kari; Stjern, Camilla Weum; Hodnebrog, Øivind; Marelle, Louis; Samset, Bjørn Hallvard; Sillmann, Jana; Schaller, Nathalie; Fischer, Erich; Schulz, Michael; Stohl, Andreas.
-Frequency of extreme precipitation increases extensively with event rareness under global warming.
-Scientific Reports 2019 ; 9.(16063)
-DOI: 10.1038/s41598-019-52277-4
-
-\item[]
-Petersen, Anna Katinka; Brasseur, Guy P.; Bouarar, Idir; Flemming, Johannes; Gauss, Michael; Jiang, Fei; Kouznetsov, Rostislav; Kranenburg, Richard; Mijling, Bas; Peuch, Vincent-Henry; Pommier, Matthieu; Segers, Arjo; Sofiev, Mikhail; Timmermans, Renske; van der A, Ronald; Walters, Stacy; Xie, Ying; Xu, Jianming; Zhou, Guangqiang.
-Ensemble forecasts of air quality in eastern China – Part 2: Evaluation of the MarcoPolo–Panda prediction system, version 1.
-Geoscientific Model Development 2019; 12. p. 1241-1266
-DOI: 10.5194/gmd-12-1241-2019
-
-\item[]
-Richardson, Thomas B.; Forster, Piers M.; Smith, Christopher J.; Maycock, Amanda C.; Wood, Tom; Andrews, Timothy; Boucher, Oliviér; Faluvegi, Gregory; Fläschner, Dagmar; Hodnebrog, Øivind; Kasoar, Matthew; Kirkevåg, Alf; Lamarque, Jean-François; Mülmenstädt, Johannes; Myhre, Gunnar; Oliviè, Dirk Jan Leo; Portmann, Robert W.; Samset, Bjørn Hallvard; Shawki, Dilshad; Shindell, Drew T.; Stier, Philip; Takemura, Toshihiko; Voulgarakis, Apostolos; Watson-Parris, Duncan.
-Efficacy of climate forcings in PDRMIP models.
-Journal of Geophysical Research (JGR): Space Physics 2019 ; 124.(23) p. 12824-12844
-DOI: 10.1029/2019JD030581
-
-\item[]
-Scannel, Claire; Booth, Ben B. B.; Dunstone, Nick J.; Rowell, David P.; Bernie, Dan J.; Kasoar, Matthew; Voulgarakis, Apostolos; Wilcox, Laura J.; Acosta Navarro, Juan C.; Seland, Øyvind; Paynterj, David J.
-The Influence of Remote Aerosol Forcing from Industrialized Economies on the Future Evolution of East and West African Rainfall.
-Journal of Climate 2019 ; 32.(23) p. 8335-8354
-DOI: 10.1175/JCLI-D-18-0716.1
-
-\item[]
-Sillmann, Jana; Stjern, Camilla Weum; Myhre, Gunnar; Samset, Bjørn Hallvard; Hodnebrog, Øivind; Andrews, Timothy; Boucher, Oliviér; Faluvegi, Gregory; Forster, Piers; Kasoar, Matthew R.; Kharin, Viatcheslav V.; Kirkevåg, Alf; Lamarque, Jean-Francois; Oliviè, Dirk Jan Leo; Richardson, Thomas B.; Shindell, Drew; Takemura, Toshihiko; Voulgarakis, Apostolos; Zwiers, Francis W..
-Extreme wet and dry conditions affected differently by greenhouse gases and aerosols.
-npj Climate and Atmospheric Science 2019 ; 2.
-DOI: 10.1038/s41612-019-0079-3
-
-\item[]
-Stjern, Camilla Weum; Lund, Marianne Tronstad; Samset, Bjørn Hallvard; Myhre, Gunnar; Forster, Piers M.; Andrews, Timothy; Boucher, Olivier; Faluvegi, Gregory; Fläschner, Dagmar; Iversen, Trond; Kasoar, Matthew; Kharin, Viatcheslav; Kirkevåg, Alf; Lamarque, Jean-François; Oliviè, Dirk Jan Leo; Richardson, Thomas; Sand, Maria; Shawki, Dilshad; Shindell, Drew; Smith, Christopher J.; Takemura, Toshihiko; Voulgarakis, Apostolos.
-Arctic Amplification Response to Individual Climate Drivers.
-Journal of Geophysical Research (JGR): Space Physics 2019 ; 124.(13) p. 6698-6717
-DOI: 10.1029/2018JD029726
-
-\item[]
-Stojiljkovic, Ana; Kauhaniemi, Mari; Kukkonen, Jaakko; Kupiainen, Kaarle; Karppinen, Ari; Denby, Bruce; Kousa, Anu; Niemi, Jarkko V; Ketzel, Matthias.
-The impact of measures to reduce ambient air PM10 concentrations originating from road dust, evaluated for a street canyon in Helsinki.
-Atmospheric Chemistry and Physics 2019 ; 19. (17) p. 11199-11212
-DOI: 10.5194/acp-19-11199-2019
-
-\item[]
-Tang, Tao; Shindell, D; Faluvegi, G.; Myhre, Gunnar; Oliviè, Dirk Jan Leo; Voulgarakis, A.; Kasoar, Matthew; Andrews, T.; Boucher, O.; Forster, Piers M.; Hodnebrog, Øivind; Iversen, Trond; Kirkevåg, Alf; Lamarque, Jean-François; Richardson, T.; Samset, Bjørn Hallvard; Stjern, Camilla Weum; Takemura, Toshihiko; Smith, C..
-Comparison of Effective Radiative Forcing Calculations Using
-Multiple Methods, Drivers, and Models. Journal of Geophysical Research (JGR): Space Physics 2019 ; 124 .(8) p. 4382-4394
-DOI: 10.1029/2018JD030188
-
-\item[]
-Theobald, Mark R.; Vivanco, Marta G.; Aas, Wenche; Andersson, Camilla; Ciarelli, Giancarlo; Couvidat, Florian; Cuvelier, Kees; Manders, Astrid; Mircea, Mihaela; Pay, Maria-Teresa; Tsyro, Svetlana; Adani, Mario; Bergström, Robert; Bessagnet, Bertrand; Briganti, Gino; Cappelletti, Andrea; D'Isidoro, Massimo; Fagerli, Hilde; Mar, Kathleen; Otero, Noelia; Raffort, Valentin; Roustan, Yelva; Schaap, Martijn; Wind, Peter; Colette, Augustin.
-An evaluation of European nitrogen and sulfur wet deposition and their trends estimated by six chemistry transport models for the period 1990–2010.
-Atmospheric Chemistry and Physics , 19 . p. 379-405, 2019.
-DOI: 10.5194/acp-19-379-2019
-
-\item[]
-Yttri, Karl Espen; Simpson, David; Bergström, Robert; Kiss, Gyula; Szidat, Sönke; Ceburnis, Darius; Eckhardt, Sabine; Hueglin, Christoph; Nøjgaard, Jacob Klenø; Perrino, Cinzia; Pisso, Ignacio; Prévôt, André Stephan Henry; Putaud, Jean-Philippe; Spindler, Gerald; Vána, Milan; Zhang, Yan-Lin; Aas, Wenche.
-The EMEP Intensive Measurement Period campaign, 2008–2009: characterizing carbonaceous aerosol at nine rural sites in Europe.
-Atmospheric Chemistry and Physics 2019 ; 19 . p. 4211-4233
-DOI: 10.5194/acp-19-4211-2019
-
-\item[]
-Winiger, P.; Barrett, T. E.; Sheesley, R. J.; Huang, L.; Sharma, S.; Barrie, L. A.; K.E. Yttri, N. Evangeliou, S. Eckhardt, A. Stohl, Klimont, Z.; Heyes, C.; Semiletov, I. P.; Dudarev, O. V.; Charkin, A.; Shakhova, N.; Holmstrand, H.; Andersson, A.; Gustafsson, Ö.
-Source apportionment of circum-Arctic atmospheric black carbon from isotopes and modeling
-Sci. Adv., 5 (2) (2019), Article eaau8052, doi:10.1126/sciadv.aau8052
+Zhang, Yuqiang; West, Jason; Emmons, Louisa K.; Flemming, Johannes; Jonson, Jan Eiof; Tronstad Lund, Marianne; Sekija, Takashi; Sudo, Kengo; Gaudel, Audrey; Chang, Kai-Lan; Nédélec, Philippe; Thouret, Valérie.
+Contributions of World Regions to the Global Tropospheric Ozone Burden Change from 1980 to 2010.
+Geophysical Research Letters 2020; 48 (1)
+DOI: 10.1029/2020GL089184
 
 \end{list}
 
@@ -681,14 +565,14 @@ Sci. Adv., 5 (2) (2019), Article eaau8052, doi:10.1126/sciadv.aau8052
 \begin{list}{}{\setlength{\leftmargin}{15pt}\setlength{\itemindent}{-\leftmargin}}\small
 % +
 \item[]
-Transboundary particulate matter, photo-oxidants, acidification and eutrophication components. Joint MSC-W \& CCC \& CEIP Report. EMEP Status Report 1/2020
+Transboundary particulate matter, photo-oxidants, acidification and eutrophication components. Joint MSC-W \& CCC \& CEIP Report. EMEP Status Report 1/2021
 
 \item[] EMEP MSC-W model performance for acidifying and
   eutrophying components, photo-oxidants and particulate matter in
-  2018. Supplementary material to EMEP Status Report 1/2020
+  2019. Supplementary material to EMEP Status Report 1/2021
 
 \item[]
- Assessment of transboundary pollution by toxic substances: Heavy metals and POPs.  Joint MSC-E  \& CCC  \& CEIP  \& INERIS Report. EMEP Status Report 2/2020
+ Assessment of transboundary pollution by toxic substances: Heavy metals and POPs.  Joint MSC-E  \& CCC  \& CEIP  \& INERIS Report. EMEP Status Report 2/2021
 
 \end{list}
 
