--- a/chapterEMEPModelUpdates.tex
+++ b/chapterEMEPModelUpdates.tex
@@ -230,10 +230,12 @@ code & Number  & \multicolumn{3}{c}{Index}      & sector & SNAP \\ \cline{3-5}
 A &      01 &   1 &  1 &   1 &  Public Power  &  1 \\
 B &      02 &   3 &  3 &   2 &  Industry  & 3, 4 \\
 C &      03 &   2 &  2 &   3 &  Other Stationary Combustion & 2 \\
-D &      04 &   4 &  4 &   4 &  Fugitive & \QUERY{EXPLAIN/CHECK??}  \\
+%D &      04 &   4 &  4 &   4 &  Fugitive & \QUERY{EXPLAIN/CHECK??}  \\
+%dev:
+D &      04 &   5 &  5 &   4 &  Fugitive & \QUERY{as in dev 16/8/CHECK??}  \\
 E &      05 &   6 &  2 &   5 &  Solvents & 6 \\
 F &      06 &   7 &  2 &   6 &  Road Transport & 7 \\
-G &      07 &   8 &  2 &   7 &  Shipping & 8  \\
+G &      07 &   8 &  8 &   7 &  Shipping & 8  \\ % dev 16/8
 H &      08 &   8 &  7 &   8 &  Aviation & 8  \\
 I &      09 &   8 &  2 &   9 &  Offroad & 8  \\
 J &     10 &   9 &  6 &  10 &  Waste & \QUERY{EXPLAIN/CHECK?} \\
@@ -404,8 +406,7 @@ The split of sea salt between the fine and coarse fractions have been revised ba
 More specifically, sea salt is emitted in seven size bins up to 10~\um in diameter, from which the smallest four bins were previously assigned to the \PM[2.5] fraction and the remaining three bins comprised coarse sea salt. Now, the fifth bin is split 50/50 \% between the \PM[2.5] and \PM[2.5-10] fractions.  
 
 
-This modification has a minor effect on formation of coarse \noiii as the surface area of coarse sea salt has slightly decreased.
-\COMMENT{SVETLANA to COMPLETE}
+This modification has a minor effect on formation of coarse \ce{NO3-} as the surface area of coarse sea salt has slightly decreased.
 
 
 
@@ -460,30 +461,33 @@ Chapters~\ref{ch:chapterStatus}--\ref{ch:Condensables}).
 \section{Revised PBL parametrisations}
 \label{sec:updateKz}
 
-The new default calculation of eddy diffusivity coefficient \textit{Kz} (TROENKz) follows the method described in \citet{troenkz}. Unlike the old \textit{Kz} method (JericevicKz) which does not consider the stability within the boundary layer, this new \textit{Kz} method differentiates \textit{Kz} formulation in the stable and unstable boundary layer conditions. Therefore, the new method predicts reasonably well in cases of weak surface heat flux and transitions between stable and unstable cases \citep{troenkz}. However, we have not seen significant changes in modeled concentrations. The formulation of \textit{Kz} is given as below. In unstable boundary layer:
-  $$\mathit{phih} = (1 - 16 \times \min(z, \mathit{zsurf}) \times \mathit{invL})^{-\frac 1 2}$$ 
+The new default calculation of eddy diffusivity coefficient \textit{Kz} (`TROENKz') follows the method described in \citet{troenkz}. Unlike the old \textit{Kz} method (JericevicKz) which does not consider the stability within the boundary layer, this new \textit{Kz} method differentiates \textit{Kz} formulation in the stable and unstable boundary layer conditions. Therefore, the new method predicts reasonably well in cases of weak surface heat flux and transitions between stable and unstable cases \citep{troenkz}. However, we have not seen significant changes in modeled concentrations. The formulation of \textit{Kz} is given as below. In unstable boundary layer:
+\begin{equation}
+    \phi_h = (1 - 16 \times \min(z, z_\mathit{surf}) \times \frac{1}{L})^{-\frac 1 2}
+\end{equation}
 while in stable boundary layer:
-  $$\mathit{phih} = 1 + 5 \times z \times \mathit{invL}$$
-and \textit{Kz} is given as:  
-  $$\mathit{Kz} = 0.4 \times \frac{\mathit{ustar}}{\mathit{phih}} \times z \times (1 - \frac z h)^2$$
-in which $z$ is the height from surface, $h$ is boundary layer depth, \textit{zsurf} is the height of surface layer which is assumed to be 10\% of the boundary layer depth $h$, \textit{invL} is the inverse of the characteristic length $L$, and \textit{ustar} is friction velocity. 
+\begin{equation}
+    \phi_h = 1 + 5 \times z \times \frac{1}{L}
+\end{equation}
+and \textit{Kz} is given as: 
+\begin{equation}
+    \mathit{Kz} = 0.4 \times \frac{u_*}{\phi_h} \times z \times (1 - \frac z h)^2
+\end{equation}
+in which $z$ is the height from surface, $h$ is boundary layer depth, $z_\mathit{surf}$ is the height of surface layer which is assumed to be 10\% of the boundary layer depth $h$,  $L$ is the Monin-bukhov length \citep{Garratt}, and $u_*$ is friction velocity.
 
 The default calculation of PBL is updated to the HmixMethod JcRb\_t2m. Compared with the old HmixMethod JcRb, the new one uses temperature at 2 m instead of temperature at the middle of the lowest grid cell to formulate PBL in the stable conditions. For unstable conditions, the new formulation is the same as the JcRb method. The differences in concentrations are unnoticeable between the two methods, but this update is more accurate according to the original reference paper \citep{JcRb}.  
 
-
-\COMMENT{QING to UPDATE}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Local Fractions}
 \label{sec:updateLF}
 
-\COMMENT{PETER: can you add a line or two to explain what the Local Fractions method is, and to point to your paper?}
+ThThe Local Fractions method \citep{wind-2020} is a frameworks that allows to track thousands of sources in a single run at a low computational cost. It is fully implemented for primary particles, but also reduced Nitrogen can be treated. The tracking of other species is less accurate, but progress is being made to eventually include a correct description for all species.
 
-The range of applications of the Local Fractions has been extended. 
+Since last year, the range of applications of the Local Fractions has been extended.
 
-The sources can be defined by either a list of countries or group of countries, as small squares surrounding the receptor grid (with user defined square sizes), or as regions defined as "masks" given in a NetCDF file.
-
-Wet and dry deposition (separately) per source country can now be computed.
+The sources can be defined by either a list of countries or group of countries, as small squares surrounding the receptor grid (with user defined range and square sizes), or as regions defined as "masks" given in a NetCDF file.
+Wet and dry deposition (separately) per source country can now be also computed.
 
 
 
