--- a/chapterStatus2019.tex
+++ b/chapterStatus2019.tex
@@ -52,11 +52,10 @@ As shown in Figure~\ref{fig:temp-avMET}~b) winter temperatures were higher than 
 
 Particularly the dry conditions in east Europe and South Caucasus is shown in Figure~\ref{fig:prec-avMET}) of winter and summer precipitation in 2019 compared to the 2000-2018 average. But also local seasonal heavy precipitation events, resulting in above-normal averages as well for individual periods and countries. 
 
-For April through September  Figure~\ref{fig:prec-avMET}~a) shows that Europe in general had much less precipitation in 2019 than the 2000-2018 average, with the exception of UK, Ireland, southern Norway and the central Mediterranean countries. In Latvia and Belarus, April was the driest month on record, and also European Russia was extremely dry. In spring, parts of France and the Iberian Peninsula was much drier than normal, but wet in Scandinavia, Italy and the northern Balkans, and Slovenia reported its wettest May on record. Summer was overall very dry in most of Europe, except for the eastern Mediterranean, the United Kingdom and southern Norway. Autumn continued with dry conditions in eastern Europe, Turkey and southwestern Iberia, while central and western Europe received above-normal precipitation. Eastern Norway was extremely wet while western Norway was very dry. Denmark reported its wettest autumn on record and in southeastern Spain local extreme precipitation totals due to heavy rain were reported for September.
+For April through September  Figure~\ref{fig:prec-avMET}~a) shows that Europe in general had much less precipitation in 2019 than the 2000-2018 average, with the exception of UK, Ireland, southern Norway and the central Mediterranean countries. In Latvia and Belarus, April was the driest month on record, and also European Russia, Germany, Czechia and northern parts of Poland was extremely dry. In spring, parts of France and the Iberian Peninsula was much drier than normal, but wet in Scandinavia, Italy and the northern Balkans, and Slovenia reported its wettest May on record. Summer was overall very dry in most of Europe, except for the eastern Mediterranean, the United Kingdom and southern Norway. Autumn continued with dry conditions in eastern Europe, Turkey and southwestern Iberia, while central and western Europe received above-normal precipitation. Eastern Norway was extremely wet while western Norway was very dry. Denmark reported its wettest autumn on record and in southeastern Spain local extreme precipitation totals due to heavy rain were reported for September.
 
-As shown in Figure~\ref{fig:prec-avMET}~b) the 2019 winter months (January-March and October-December) precipitation were wetter than the 2000-2018 average in most of Europe, except drier conditions in western Norway, southern Iberian Peninsula, southeastern Europe, southern European Russia, South Caucasus, Kyrgyz Rpublig
-% The winter season was very wet in northern European %Russia, Moldova, southern Norway, Czechia, Greece and % southern parts of European Russia, and the Caucasus region/countries ...
- western Norway, Ireland, southern France, Spain and Portugal. January was wetter than normal in central Europe, European Russia, Greece, Moldova and Spain. However in Spain it was the driest February in the twenty-first century, and also Germany, Belarus and Hungary received very little precipitation for this month. Spain, Portugal, Hungary, Romania, Ukraine and Moldova was also drier than normal in March, but northern European Russia broke records with wettest month. Turkey was wetter than normal in September, while Moldova was drier. For November the Alps recorded substantial snow amounts with new records in Switzerland, while it was still dry in Moldova. December was very wet in northern European Russia, Finland and southern Turkey, but abnormally dry in Macedonia and Bulgaria. For October, November and December, south Caucasus was extremely dry and in Georgia the snowcover for December was recordlow.
+As shown in Figure~\ref{fig:prec-avMET}~b) the 2019 winter months (January-March and October-December) precipitation were wetter than the 2000-2018 average in most of Europe, except drier conditions in western Norway, southern Iberian Peninsula, southeastern Europe, southern European Russia, South Caucasus, Kyrgyz Republic
+and Tajikistan. January was wetter than normal in central Europe, European Russia, Greece, Moldova and Spain. However in Spain it was the driest February in the twenty-first century, and also Germany, Belarus and Hungary received very little precipitation for this month. Spain, Portugal, Hungary, Romania, Ukraine and Moldova was also drier than normal in March, but northern European Russia broke records with wettest month. Turkey was wetter than normal in September, while Moldova was drier. For November the Alps recorded substantial snow amounts with new records in Switzerland, while it was still dry in Moldova. December was very wet in northern European Russia, Finland and southern Turkey, but abnormally dry in Macedonia and Bulgaria. For October, November and December, south Caucasus was extremely dry and in Georgia the snowcover for December was recordlow.
 
 
 \section{Measurement network 2018 WENCHE/NILU TO CHANGE} 
